--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,8 @@
 
         <activity
 
-            android:name=".MainActivity" />
+            android:name=".LoginActivity" />
+        <activity android:name=".Chat_Room" />
 
         <activity   android:name=".RegisterActivity" />
         <activity android:name=".ForgotPasswordActivity" />
